--- a/Demon_Start_End_Print.cfg
+++ b/Demon_Start_End_Print.cfg
@@ -45,7 +45,7 @@
 ###### CHANGE YOUR START PRINT VALUES HERE!! ######
 ###################################################
 
-[gcode_macro _START_VARIBLES]
+[gcode_macro _START_VARIABLES]
 
 variable_flow_rate: 100 # Tune your flow rate, default 100
 variable_lo_noz_pre: 140 # Set Nozzle PLA Pre Heat Temp, default 140
@@ -77,7 +77,7 @@ gcode:
   {% set first_layer_extruder = params.EXTRUDER|int %}
   {% set first_layer_height = params.HEIGHT|default(0.3)|float %}
 
-  {% set start_vars = printer["gcode_macro _START_VARIBLES"] %}
+  {% set start_vars = printer["gcode_macro _START_VARIABLES"] %}
 
  ##################################################################
 
