--- a/demon_print_start_end_v2.3.cfg
+++ b/demon_print_start_end_v2.3.cfg
@@ -406,12 +406,12 @@ gcode:
   {% if start_vars.chamber_sensor == False %}
 
     {% if filament_type in ['PLA', 'PET', 'FLEX'] %} 
-      M118 CHAMBER_TIMER_LO
+     # M118 CHAMBER_TIMER_LO
       G1 X{x_park} Y{y_park} Z5 F4000                         # Goes to center of the bed
       _HEAT_WAIT MINUTES={start_vars.lo_temp_timer}     
     
     {% elif filament_type in ['ASA', 'ABS'] %}  
-      M118 CHAMBER_TIMER_HI
+     # M118 CHAMBER_TIMER_HI
       G1 X{x_park} Y{y_park} Z5 F4000                         # Goes to center of the bed
       # M106 S255
       _HEAT_WAIT MINUTES={start_vars.hi_temp_timer}    
@@ -419,12 +419,12 @@ gcode:
     {% else %}
       {% if params.BED|float < 90 %}
         G1 X{x_park} Y{y_park} Z5 F4000                         # Goes to center of the bed 
-        M118 Timer By Temp
+       # M118 Timer By Temp
         _HEAT_WAIT MINUTES={start_vars.lo_temp_timer}
 
       {% else %}
         G1 X{x_park} Y{y_park} Z5 F4000                         # Goes to center of the bed
-        M118 Timer By High Temp
+       # M118 Timer By High Temp
         # M106 S255
         _HEAT_WAIT MINUTES={start_vars.hi_temp_timer}
       {% endif %}
@@ -686,4 +686,6 @@ gcode:
     M112 # E-Stop & shutdown 
 
 
+[gcode_macro M900]
+gcode:
 
