--- a/demon_user_settings_v2.3.cfg
+++ b/demon_user_settings_v2.3.cfg
@@ -14,7 +14,7 @@
 
 # M104 S0 ; Stops PrusaSlicer from sending temp waits separately
 # M140 S0
-# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[extrusion_width] 
+# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width] 
 
 #########################################################################
 ### IF YOU USE CURA ### 
