--- a/demon_print_start_end_v2.3.cfg
+++ b/demon_print_start_end_v2.3.cfg
@@ -10,11 +10,20 @@
 #########################################################################
 # FOR THIS TO WORK!!!
 # YOU MUST DO THIS!!!
-# ADD THE 3 LINES BELOW TO PRUSASLICER'S OR ORCA SLICER'S START GCODE SECTION
+# ADD THE 3 LINES BELOW TO PRUSASLICER'S START GCODE SECTION
 
-# M104 S0 ; Stops PrusaSlicer from sending temp waits separately
+# M104 S0
 # M140 S0
-# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width]
+# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width] 
+
+# #########################################################################
+
+# IF YOU USE ORCA SLICER
+# ADD THE 3 LINES BELOW TO ORCA SLICER'S START GCODE SECTION
+
+# M104 S0
+# M140 S0
+# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[outer_wall_line_width]
 
 #########################################################################
 ### IF YOU USE CURA ### 
