--- a/demon_print_start_end_v2.3.cfg
+++ b/demon_print_start_end_v2.3.cfg
@@ -126,7 +126,7 @@ gcode:
   
     M220 S{start_vars.feed_rate}
  
-  {% if filament_type == 'PLA' and layer_height|float <0.25%}
+  {% if filament_type in ['PLA', 'PLA+'] and layer_height|float <0.25%}
     M221 S{start_vars.pla_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.pla_pa} SMOOTH_TIME={start_vars.pla_st}
 
@@ -138,15 +138,15 @@ gcode:
     M221 S{start_vars.abs_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.abs_pa} SMOOTH_TIME={start_vars.abs_st}
 
-  {% elif filament_type == 'PET' and layer_height|float <0.25%}
+  {% elif filament_type in ['PET', 'PETG'] and layer_height|float <0.25%}
     M221 S{start_vars.petg_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.petg_pa} SMOOTH_TIME={start_vars.petg_st}   
 
-  {% elif filament_type == 'FLEX' and layer_height|float <0.25%}
+  {% elif filament_type in ['FLEX', 'TPU'] and layer_height|float <0.25%}
     M221 S{start_vars.tpu_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.tpu_pa} SMOOTH_TIME={start_vars.tpu_st}  
 
-  {% elif filament_type == 'PLA' and layer_height|float >0.26%}
+  {% elif filament_type in ['PLA', 'PLA+'] and layer_height|float >0.26%}
     M221 S{start_vars.pla_hi_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.pla_pa} SMOOTH_TIME={start_vars.pla_st}
 
@@ -158,11 +158,11 @@ gcode:
     M221 S{start_vars.abs_hi_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.abs_pa} SMOOTH_TIME={start_vars.abs_st}
 
-  {% elif filament_type == 'PET' and layer_height|float >0.26%}
+  {% elif filament_type in ['PET', 'PETG'] and layer_height|float >0.26%}
     M221 S{start_vars.petg_hi_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.petg_pa} SMOOTH_TIME={start_vars.petg_st}
    
-  {% elif filament_type == 'FLEX' and layer_height|float >0.26%}
+  {% elif filament_type in ['FLEX', 'TPU'] and layer_height|float >0.26%}
     M221 S{start_vars.tpu_hi_flow_rate}
     SET_PRESSURE_ADVANCE ADVANCE={start_vars.tpu_pa} SMOOTH_TIME={start_vars.tpu_st}  
 
@@ -186,7 +186,7 @@ gcode:
 
 ## NOZZLE PREHEATING ############################################################################################################################
 
-  {% if filament_type == 'PLA' %} 
+  {% if filament_type in ['PLA', 'PLA+'] %} 
     SET_DISPLAY_TEXT MSG="PLA File Detected Hotend Preheat: {start_vars.pla_noz_pre}c"          # Displays info 
     # RESPOND TYPE=echo MSG="PLA File Detected Hotend Preheat: {start_vars.pla_noz_pre}c"          # Displays info 
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={start_vars.pla_noz_pre} 
@@ -204,19 +204,19 @@ gcode:
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={start_vars.abs_noz_pre} 
     TEMPERATURE_WAIT SENSOR=extruder MINIMUM={start_vars.abs_noz_pre|float -2} MAXIMUM={start_vars.abs_noz_pre|float + 5}    
 
-  {% elif filament_type == 'PET' %}
+  {% elif filament_type in ['PET', 'PETG'] %}
     SET_DISPLAY_TEXT MSG="PETG File Detected Hotend Preheat: {start_vars.petg_noz_pre}c"          # Displays info 
     # RESPOND TYPE=echo MSG="PETG File Detected Hotend Preheat: {start_vars.petg_noz_pre}c"          # Displays info 
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={start_vars.petg_noz_pre} 
     TEMPERATURE_WAIT SENSOR=extruder MINIMUM={start_vars.petg_noz_pre|float -2} MAXIMUM={start_vars.petg_noz_pre|float + 5}
 
-  {% elif filament_type == 'FLEX' %}
+  {% elif filament_type in ['FLEX', 'TPU'] %}
     SET_DISPLAY_TEXT MSG="TPU File Detected Hotend Preheat: {start_vars.tpu_noz_pre}c"          # Displays info 
     # RESPOND TYPE=echo MSG="TPU File Detected Hotend Preheat: {start_vars.tpu_noz_pre}c"          # Displays info 
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={start_vars.tpu_noz_pre} 
     TEMPERATURE_WAIT SENSOR=extruder MINIMUM={start_vars.tpu_noz_pre|float -2} MAXIMUM={start_vars.tpu_noz_pre|float + 5}  
 
-  {% elif not filament_type in ['PLA', 'PET', 'FLEX', 'ASA', 'ABS'] %}
+  {% elif not filament_type in ['PLA', 'PLA+', 'ASA', 'ABS', 'PET', 'PETG', 'FLEX', 'TPU'] %}
     {% if params.EXTRUDER|float <220 %}
       SET_DISPLAY_TEXT MSG="Hotend Preheat by file temp: {start_vars.default_lo_noz_pre}c"          # Displays info        
       # RESPOND TYPE=echo MSG="Hotend Preheat by file temp: {start_vars.default_lo_noz_pre}c"          # Displays info        
@@ -248,7 +248,7 @@ gcode:
 
   {% if start_vars.chamber_fan == True %}
 
-    {% if filament_type == 'PLA' %}        
+    {% if filament_type in ['PLA', 'PLA+'] %}        
       SET_TEMPERATURE_FAN_TARGET temperature_fan="chamber" target={start_vars.pla_chamber_temp}
 
     {% elif filament_type == 'ASA' %} 
@@ -257,10 +257,10 @@ gcode:
     {% elif filament_type == 'ABS' %} 
       SET_TEMPERATURE_FAN_TARGET temperature_fan="chamber" target={start_vars.abs_chamber_temp}
 
-    {% elif filament_type == 'PET' %} 
+    {% elif filament_type in ['PET', 'PETG'] %} 
       SET_TEMPERATURE_FAN_TARGET temperature_fan="chamber" target={start_vars.petg_chamber_temp}
 
-    {% elif filament_type == 'FLEX' %} 
+    {% elif filament_type in ['FLEX', 'TPU'] %} 
       SET_TEMPERATURE_FAN_TARGET temperature_fan="chamber" target={start_vars.tpu_chamber_temp}
 
     {% else %} 
@@ -275,7 +275,7 @@ gcode:
 
 ## BED MESH & FILAMENT HANDLING #########################################################################################################################
 
-  {% if filament_type == 'PLA' %}        
+  {% if filament_type in ['PLA', 'PLA+'] %}        
     BED_MESH_PROFILE LOAD="default"
     M118 Default loaded
 
@@ -289,12 +289,12 @@ gcode:
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
     M118 ABS loaded
     
-  {% elif filament_type == 'PET' %}  
+  {% elif filament_type in ['PET', 'PETG'] %}  
     BED_MESH_PROFILE LOAD="PETG"  
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
     M118 PETG loaded
     
-  {% elif filament_type == 'FLEX' %}  
+  {% elif filament_type in ['FLEX', 'TPU'] %}  
     BED_MESH_PROFILE LOAD="TPU"  
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
     M118 TPU loaded
@@ -333,7 +333,7 @@ gcode:
     
     {% endif %}  
 
-  {% elif start_vars.petg_anti_squish == True and filament_type == 'PET' %}
+  {% elif start_vars.petg_anti_squish == True and filament_type in ['PET', 'PETG'] %}
     {% if start_vars.petg_offset >= 0.0 and start_vars.petg_offset <= 0.1%}
       SET_GCODE_OFFSET Z_ADJUST={start_vars.petg_offset} MOVE=1  
       M117 WARNING REQUESTED PETG OFFSET ADJUSTMENT APPLIED
@@ -359,7 +359,7 @@ gcode:
 
   {% if start_vars.chamber_sensor == True %}    
 
-    {% if filament_type in ['PLA', 'PET', 'FLEX'] %}
+    {% if filament_type in ['PLA', 'PLA+', 'PET', 'PETG', 'FLEX', 'TPU'] %}
       {% if printer["temperature_sensor Chamber_Temp"].temperature <start_vars.lo_heat_soak_threshold %}
         G1 X{x_park} Y{y_park} Z5 F4000                         # Goes to center of the bed
           {% if start_vars.chamber_temp_wait == True %}
@@ -414,7 +414,7 @@ gcode:
 
   {% if start_vars.chamber_sensor == False %}
 
-    {% if filament_type in ['PLA', 'PET', 'FLEX'] %} 
+    {% if filament_type in ['PLA', 'PLA+', 'PET', 'PETG', 'FLEX', 'TPU'] %} 
      # M118 CHAMBER_TIMER_LO
       G1 X{x_park} Y{y_park} Z5 F4000                         # Goes to center of the bed
       _HEAT_WAIT MINUTES={start_vars.lo_temp_timer}     
