--- a/demon_print_start_end_v2.3.cfg
+++ b/demon_print_start_end_v2.3.cfg
@@ -27,7 +27,7 @@
 
 #########################################################################
 ### IF YOU USE CURA ### 
-# ADD THE 3 LINES BELOW TO CURA SLICER'S START GCODE SECTION, BUT YOU WILL ALSO NEED TO MAKE CHANGES TO THE MACROS THEMSELVES - SORRY :-{
+# ADD THE 3 LINES BELOW TO CURA SLICER'S START GCODE SECTION
 
 # M109 S0
 # M190 S0
@@ -37,9 +37,7 @@
 # BE SURE TO DELETE THE HASH "#" AT THE LINE START IN YOUR SLICER OR IT WONT WORK
 # Your slicer's Start G-Code box most only contain those 3 lines above, plus the Mainsail layer count command - see the Mailsail website's slicer section.
 # https://docs.mainsail.xyz/overview/slicer
-# Then you will also need to modify all instances of 'PET' & 'FLEX' in the macros to 'PETG' & 'TPU 95A'. Also do not use Cura's 'PLA+' setting, Just use 'PLA'.
-# Yes, I know its a hassle...
-# But tbh, why are you still using Cura?! lol ;-p
+
 #########################################################################
 
 # Also be sure to add the line below in your slicer's End G-Code box
