--- a/demon_print_start_end_v2.3.cfg
+++ b/demon_print_start_end_v2.3.cfg
@@ -275,27 +275,27 @@ gcode:
 
   {% if filament_type in ['PLA', 'PLA+'] %}        
     BED_MESH_PROFILE LOAD="default"
-    M118 Default loaded
+   # M118 Default loaded
 
   {% elif filament_type == 'ASA' %} 
     BED_MESH_PROFILE LOAD="ASA"
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
-    M118 ASA loaded
+   # M118 ASA loaded
     
   {% elif filament_type == 'ABS' %} 
     BED_MESH_PROFILE LOAD="ABS"
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
-    M118 ABS loaded
+   # M118 ABS loaded
     
   {% elif filament_type in ['PET', 'PETG'] %}  
     BED_MESH_PROFILE LOAD="PETG"  
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
-    M118 PETG loaded
+   # M118 PETG loaded
     
   {% elif filament_type in ['FLEX', 'TPU'] %}  
     BED_MESH_PROFILE LOAD="TPU"  
     SET_GCODE_VARIABLE MACRO=PRINT_END VARIABLE=offset_reset VALUE=True
-    M118 TPU loaded
+   # M118 TPU loaded
 
   {% else %}    
 
