--- a/demon_user_settings_v2.4.cfg
+++ b/demon_user_settings_v2.4.cfg
@@ -221,6 +221,8 @@ variable_feed_rate: 100                          # Default Print Feed Rate
 variable_printer_lights_print: 1                 # Level to set lights to at start of print 0.1-1.0 (0.1=10%, 1=100%)
 variable_printer_lights_finish: 0.2              # Level to set lights to at end of print 0.1-1.0 (0.1=10%, 1=100%)
 
+variable_apa_readback_enable: True               # Set console to log all Adaptive Pressure Advance actions during the print True/False
+
 ## PRINTER HARDWARE OPTIONS ######################################################################################################################
 variable_five_drivers: False                     # Does your printer have 5 stepper drivers (SV07/07+) True/False
 variable_chamber_fan: False                      # Do you have a Chamber cooling fan True/False
