--- a/demon_mesh_builder_v1.0.cfg
+++ b/demon_mesh_builder_v1.0.cfg
@@ -4,7 +4,7 @@
 #######   https://github.com/3DPrintDemon   #######
 # The idea for this macro is inspired by the contribution of Karl L, his original macro is at the end of this file
 
-[gcode_macro AUTO_5_BED_MESH_BUILDER]
+[gcode_macro AUTO_BED_MESH_BUILDER]
 gcode:
     {% set start_vars = printer["gcode_macro _START_VARIABLES"] %}
     {% set mesh_vars = printer["gcode_macro _MESH_BUILDER_VARIABLES"] %}
