--- a/demon_mesh_builder_v1.0.cfg
+++ b/demon_mesh_builder_v1.0.cfg
@@ -42,10 +42,10 @@ gcode:
 
     G1 X{x_park} Y{y_park} Z{mesh_vars.z_park} F9000
                                          
-    SET_DISPLAY_TEXT MSG="Waiting For TPU Mesh Bed Temp: {mesh_vars.tpu_bed_temp}c"                
-    RESPOND TYPE=echo MSG="Waiting For TPU Mesh Bed Temp: {mesh_vars.tpu_bed_temp}c"             
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.tpu_bed_temp} 
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.tpu_bed_temp|float -2} MAXIMUM={mesh_vars.tpu_bed_temp|float + 5}   
+    SET_DISPLAY_TEXT MSG="Waiting For TPU Mesh Bed Temp: {mesh_vars.mesh_tpu_bed_temp}c"                
+    RESPOND TYPE=echo MSG="Waiting For TPU Mesh Bed Temp: {mesh_vars.mesh_tpu_bed_temp}c"             
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.mesh_tpu_bed_temp} 
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.mesh_tpu_bed_temp|float -2} MAXIMUM={mesh_vars.mesh_tpu_bed_temp|float + 5}   
 
   {% if start_vars.chamber_sensor == True %}    
     _WAIT_HANDLING_LOW_TEMP
@@ -68,10 +68,10 @@ gcode:
 
     G1 X{x_park} Y{y_park} Z{mesh_vars.z_park} F9000
     
-    SET_DISPLAY_TEXT MSG="Waiting For PLA Mesh Bed Temp: {mesh_vars.pla_bed_temp}c"                
-    RESPOND TYPE=echo MSG="Waiting For PLA Mesh Bed Temp: {mesh_vars.pla_bed_temp}c"             
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.pla_bed_temp} 
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.pla_bed_temp|float -2} MAXIMUM={mesh_vars.pla_bed_temp|float + 5}   
+    SET_DISPLAY_TEXT MSG="Waiting For PLA Mesh Bed Temp: {mesh_vars.mesh_pla_bed_temp}c"                
+    RESPOND TYPE=echo MSG="Waiting For PLA Mesh Bed Temp: {mesh_vars.mesh_pla_bed_temp}c"             
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.mesh_pla_bed_temp} 
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.mesh_pla_bed_temp|float -2} MAXIMUM={mesh_vars.mesh_pla_bed_temp|float + 5}   
 
   {% if start_vars.chamber_sensor == True %}    
     _WAIT_HANDLING_LOW_TEMP
@@ -94,10 +94,10 @@ gcode:
 
     G1 X{x_park} Y{y_park} Z{mesh_vars.z_park} F9000
     
-    SET_DISPLAY_TEXT MSG="Waiting For PETG Mesh Bed Temp: {mesh_vars.petg_bed_temp}c"                
-    RESPOND TYPE=echo MSG="Waiting For PETG Mesh Bed Temp: {mesh_vars.petg_bed_temp}c"             
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.petg_bed_temp} 
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.petg_bed_temp|float -2} MAXIMUM={mesh_vars.petg_bed_temp|float + 5}   
+    SET_DISPLAY_TEXT MSG="Waiting For PETG Mesh Bed Temp: {mesh_vars.mesh_petg_bed_temp}c"                
+    RESPOND TYPE=echo MSG="Waiting For PETG Mesh Bed Temp: {mesh_vars.mesh_petg_bed_temp}c"             
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.mesh_petg_bed_temp} 
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.mesh_petg_bed_temp|float -2} MAXIMUM={mesh_vars.mesh_petg_bed_temp|float + 5}   
 
   {% if start_vars.chamber_sensor == True %}    
     _WAIT_HANDLING_LOW_TEMP
@@ -120,10 +120,10 @@ gcode:
 
     G1 X{x_park} Y{y_park} Z{mesh_vars.z_park} F9000
     
-    SET_DISPLAY_TEXT MSG="Waiting For ASA Mesh Bed Temp: {mesh_vars.asa_bed_temp}c"                
-    RESPOND TYPE=echo MSG="Waiting For ASA Mesh Bed Temp: {mesh_vars.asa_bed_temp}c"             
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.asa_bed_temp} 
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.asa_bed_temp|float -2} MAXIMUM={mesh_vars.asa_bed_temp|float + 5}   
+    SET_DISPLAY_TEXT MSG="Waiting For ASA Mesh Bed Temp: {mesh_vars.mesh_asa_bed_temp}c"                
+    RESPOND TYPE=echo MSG="Waiting For ASA Mesh Bed Temp: {mesh_vars.mesh_asa_bed_temp}c"             
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.mesh_asa_bed_temp} 
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.mesh_asa_bed_temp|float -2} MAXIMUM={mesh_vars.mesh_asa_bed_temp|float + 5}   
 
   {% if start_vars.chamber_sensor == True %}    
     _WAIT_HANDLING_HIGH_TEMP
@@ -146,10 +146,10 @@ gcode:
 
     G1 X{x_park} Y{y_park} Z{mesh_vars.z_park} F9000
     
-    SET_DISPLAY_TEXT MSG="Waiting For ABS Mesh Bed Temp: {mesh_vars.abs_bed_temp}c"                
-    RESPOND TYPE=echo MSG="Waiting For ABS Mesh Bed Temp: {mesh_vars.abs_bed_temp}c"             
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.abs_bed_temp} 
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.abs_bed_temp|float -2} MAXIMUM={mesh_vars.abs_bed_temp|float + 5}   
+    SET_DISPLAY_TEXT MSG="Waiting For ABS Mesh Bed Temp: {mesh_vars.mesh_abs_bed_temp}c"                
+    RESPOND TYPE=echo MSG="Waiting For ABS Mesh Bed Temp: {mesh_vars.mesh_abs_bed_temp}c"             
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={mesh_vars.mesh_abs_bed_temp} 
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={mesh_vars.mesh_abs_bed_temp|float -2} MAXIMUM={mesh_vars.mesh_abs_bed_temp|float + 5}   
 
   {% if start_vars.chamber_sensor == True %}    
     _WAIT_HANDLING_HIGH_TEMP
