--- a/demon_mesh_builder_v1.0.cfg
+++ b/demon_mesh_builder_v1.0.cfg
@@ -193,7 +193,7 @@ gcode:
 
 [gcode_macro _WAIT_HANDLING_LOW_TEMP]
 gcode:
-
+  {% set start_vars = printer["gcode_macro _START_VARIABLES"] %}
   {% if printer["temperature_sensor Chamber_Temp"].temperature <start_vars.lo_heat_soak_threshold %}
       {% if start_vars.chamber_temp_wait == True %}
         SET_DISPLAY_TEXT MSG="Waiting For Chamber Temp: {start_vars.lo_heat_soak_threshold}c"
@@ -211,7 +211,7 @@ gcode:
 
 [gcode_macro _WAIT_HANDLING_HIGH_TEMP]
 gcode:
-
+  {% set start_vars = printer["gcode_macro _START_VARIABLES"] %}
   {% if printer["temperature_sensor Chamber_Temp"].temperature <start_vars.hi_heat_soak_threshold %}
       {% if start_vars.chamber_temp_wait == True %}
         SET_DISPLAY_TEXT MSG="Waiting For Chamber Temp: {start_vars.hi_heat_soak_threshold}c"
@@ -229,6 +229,8 @@ gcode:
 
 [gcode_macro _PRE_MESH_LEVEL]
 gcode:
+  {% set start_vars = printer["gcode_macro _START_VARIABLES"] %}
+  
    {% if start_vars.five_drivers == True %}
     SET_DISPLAY_TEXT MSG="Gantry Levelling"     
     G28 Z
