--- a/demon_user_settings_v2.4.cfg
+++ b/demon_user_settings_v2.4.cfg
@@ -237,10 +237,8 @@ variable_purge_along_y: True                     # Set to True to draw purge lin
 variable_start_x_position: 0.4                   # Set your nozzle's X start position 50mm MAX - this should be the front left corner of your bed
 variable_start_y_position: 10                    # Set your nozzle's Y start position 50mm MAX - this should be the front left corner of your bed
 variable_purge_line_length: 150                  # Set how long in actual mm you want to draw your purge lines 150mm MAX - this is NOT an axis postion but mm.
-variable_purge_extrude_line_a: 15                # Set how much to extrude on the first line up the bed
-variable_purge_extrude_line_b: 30                # Set how much to extrude on the second line back down the bed
 
-## NOTE: Do NOT set your purge_extrude_line_a/b values too high or you'll over extrude or even cause damage to your machine. 15 & 30 are good numbers
+## NOTE: Purge Lines are now automatically calculated using nozzle size & recommneded rates 
 ## NOTE: Entering greater than MAX values will cause an EMERGENCY STOP
 
 ## DEMON VERSION NUMBER ##########################################################################################################################
