--- a/demon_print_start_end_v2.4.cfg
+++ b/demon_print_start_end_v2.4.cfg
@@ -16,7 +16,7 @@
 #########################################################################
 # M104 S0
 # M140 S0
-# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width] 
+# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width] 
 
 # #########################################################################
 # IF YOU USE ORCA SLICER - you have extra features available to you!
@@ -24,7 +24,7 @@
 #########################################################################
 # M104 S0
 # M140 S0
-# PRINT_START EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] HEIGHT=[first_layer_height] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[outer_wall_line_width]
+# PRINT_START EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[outer_wall_line_width]
 
 #########################################################################
 # ORCA SLICER ONLY!!
@@ -39,7 +39,7 @@
 #########################################################################
 # M109 S0
 # M190 S0
-# print_start EXTRUDER={material_print_temperature_layer_0} BED={material_bed_temperature_layer_0} HEIGHT={layer_height_0} LAYER={layer_height} FILAMENT={material_type} EXTRUSION={line_width}
+# print_start EXTRUDER={material_print_temperature_layer_0} BED={material_bed_temperature_layer_0} LAYER={layer_height} FILAMENT={material_type} EXTRUSION={line_width}
 
 #########################################################################
 #########################################################################
@@ -104,7 +104,6 @@ gcode:
 # Do not edit this section, this gets the info from the print file
   {% set first_layer_bed = params.BED|int %}
   {% set first_layer_extruder = params.EXTRUDER|float %}
-  {% set first_layer_height = params.HEIGHT|default(0.3)|float %}
   {% set layer_height = params.LAYER|default(0.2)|float %}
   {% set filament_type = params.FILAMENT|default('PLA')|string %}
   {% set extrusion_width = params.EXTRUSION|default(0.4)|float %}  
