--- a/demon_print_start_end_v2.4.cfg
+++ b/demon_print_start_end_v2.4.cfg
@@ -512,7 +512,7 @@ gcode:
 [gcode_macro _PURGE_LINES]
 gcode:
   {% set start_vars = printer["gcode_macro _START_VARIABLES"] %}
-  {% set height = (printer.configfile.settings.extruder.nozzle_diameter * 0.625)|float %}
+  {% set height = (printer.configfile.settings.extruder.nozzle_diameter * 0.75)|float %}
   {% set width = (printer.configfile.settings.extruder.nozzle_diameter * 1.25)|float %}
   {% set filament_area = 3.14159 * (printer.configfile.settings.extruder.filament_diameter ** 2) / 4 %}
   {% set rate = start_vars.purge_line_length * ((width * height) / filament_area) %}
@@ -541,7 +541,7 @@ gcode:
 
   {% else %}
     G1 X{start_vars.purge_line_length} E{rate} F1500 # Draw the first line
-    G0 Y{width +0.4} F5000 # Move to side a little
+    G0 Y{width} F5000 # Move to side a little
     G1 X-{start_vars.purge_line_length -15} E{rate} F1500
   # G4 P2000 # wait 02 seconds 
   {% endif %}
