--- a/demon_adaptive_pa_v1.0.cfg
+++ b/demon_adaptive_pa_v1.0.cfg
@@ -73,9 +73,9 @@ gcode:
       
     {% elif ext_type == "TopSolidInfill" and apa_vars.pla_top_surface_pa > 0 %}
       {% if start_vars.apa_readback_enable == True %}
-        RESPOND TYPE=COMMAND MSG="PA change APA setting Top surface {apa_vars.pla_top_surface_pa}"
+        RESPOND TYPE=COMMAND MSG="PA change APA setting Top surface {apa_vars.top_srfc}"
       {% endif %}
-        SET_PRESSURE_ADVANCE ADVANCE={apa_vars.pla_top_surface_pa}
+        SET_PRESSURE_ADVANCE ADVANCE={apa_vars.top_srfc}
       
       
     {% elif ext_type == "TopSolidInfill" and apa_vars.pla_top_surface_pa == 0 %}
