--- a/demon_adaptive_pa_v1.0.cfg
+++ b/demon_adaptive_pa_v1.0.cfg
@@ -71,14 +71,14 @@ gcode:
         SET_PRESSURE_ADVANCE ADVANCE={apa_vars.default}
       
       
-    {% elif ext_type == "TopSolidInfill" and apa_vars.pla_top_surface_pa > 0 %}
+    {% elif ext_type == "TopSolidInfill" and apa_vars.top_srfc > 0 %}
       {% if start_vars.apa_readback_enable == True %}
         RESPOND TYPE=COMMAND MSG="PA change APA setting Top surface {apa_vars.top_srfc}"
       {% endif %}
         SET_PRESSURE_ADVANCE ADVANCE={apa_vars.top_srfc}
       
       
-    {% elif ext_type == "TopSolidInfill" and apa_vars.pla_top_surface_pa == 0 %}
+    {% elif ext_type == "TopSolidInfill" and apa_vars.top_srfc == 0 %}
       {% if start_vars.apa_readback_enable == True %}
         RESPOND TYPE=COMMAND MSG="PA change default setting Top surface {apa_vars.default}"
       {% endif %}
