--- a/demon_user_settings_v2.5.cfg
+++ b/demon_user_settings_v2.5.cfg
@@ -105,7 +105,7 @@
 ## ORCA SLICER VARIABLES #########################################################################################################################
 variable_orca_enable: False                       # ONLY available for Orca Slicer Enable Adaptive Pressure Advance features True/False
 variable_apa_readback_enable: False               # Set console to log all Adaptive Pressure Advance actions during the print True/False
-variable_dam: False                               # Set to use Adaptive Meshing for building a new mesh for model area for each print True/False
+variable_adaptive_meshing: False                               # Set to use Adaptive Meshing for building a new mesh for model area for each print True/False
 
 # NOTE: Adaptive Meshing 
 # You must have the latest update of Klipper as of 1st Feb 2024 & "Label Objects" & "Exclude Objects" enabled in your Slicer 
