--- a/demon_print_start_end_v2.5.cfg
+++ b/demon_print_start_end_v2.5.cfg
@@ -120,8 +120,10 @@ gcode:
     _APA_SET
   {% endif %}
 
-  {% if start_vars.adaptive_meshing == True and exclude_object != 1%}
-    {action_raise_error("This error is caused by the sliced file not having EXCLUDE_OBJECT enabled! Please disable Adaptive_Meshing in the user_settings.cfg or re-slice the file with it enabled and restart the print!")}
+  {% if start_vars.orca_enable == True %}
+    {% if start_vars.adaptive_meshing == True and exclude_object != 1%}
+      {action_raise_error("This error is caused by the sliced file not having EXCLUDE_OBJECT enabled! Please disable Adaptive_Meshing in the user_settings.cfg or re-slice the file with it enabled and restart the print!")}
+    {% endif %}
   {% endif %}
   
     _DEMON_VERSION
