--- a/demon_user_settings_v2.5.cfg
+++ b/demon_user_settings_v2.5.cfg
@@ -16,7 +16,7 @@
 #########################################################################
 # M104 S0
 # M140 S0
-# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width] EXCLUDE=[exclude_object]
+# print_start EXTRUDER=[first_layer_temperature[initial_extruder]] BED=[first_layer_bed_temperature] LAYER=[layer_height] FILAMENT=[filament_type] EXTRUSION=[external_perimeter_extrusion_width]
 
 # #########################################################################
 # IF YOU USE ORCA SLICER - you have extra features available to you!
