--- a/demon_print_start_end_v2.5.cfg
+++ b/demon_print_start_end_v2.5.cfg
@@ -107,7 +107,7 @@ gcode:
   {% set layer_height = params.LAYER|default(0.2)|float %}
   {% set filament_type = params.FILAMENT|default('PLA')|string %}
   {% set extrusion_width = params.EXTRUSION|default(0.4)|float %}
-  {% set exclude_object = params.EXCLUDE|int %}  
+  {% set exclude_object = params.EXCLUDE|default(0)|int %}  
   {% set x_park = printer.toolhead.axis_maximum.x|float / 2 %}
   {% set y_park = printer.toolhead.axis_maximum.y|float / 2 %}
 
