--- a/demon_print_start_end_v2.5.cfg
+++ b/demon_print_start_end_v2.5.cfg
@@ -299,7 +299,7 @@ gcode:
 
 ## STORED BED MESH OR ADAPTIVE #########################################################################################################################
 
-{% if start_vars.dam == True %}
+{% if start_vars.adaptive_meshing == True %}
    
   {% else %}  
 
@@ -492,7 +492,7 @@ gcode:
  
     G28 Z
 
-  {% if start_vars.dam == True %}
+  {% if start_vars.adaptive_meshing == True %}
     BED_MESH_CALIBRATE PROFILE=DAM ADAPTIVE=1 ADAPTIVE_MARGIN=10
   {% endif %}
 
