--- a/demon_user_settings_v2.5.cfg
+++ b/demon_user_settings_v2.5.cfg
@@ -102,7 +102,7 @@
 [gcode_macro _START_VARIABLES]
 ##################################################################################################################################################
 
-## ORCA SLICER VARIABLES #########################################################################################################################
+## SYSTEM VARIABLES #########################################################################################################################
 variable_orca_enable: False                       # ONLY available for Orca Slicer Enable Adaptive Pressure Advance features True/False
 variable_apa_readback_enable: False               # Set console to log all Adaptive Pressure Advance actions during the print True/False
 variable_adaptive_meshing: False                               # Set to use Adaptive Meshing for building a new mesh for model area for each print True/False
